[FIX] white-space: nowrap in CustomInput's label to prevent label wrapping in Firefox.

--- a/client/src/components/custom-input/custom-input.styles.scss
+++ b/client/src/components/custom-input/custom-input.styles.scss
@@ -39,7 +39,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: fit-content;
+    white-space: nowrap;
     transform: translate(-50%, -50%);
     pointer-events: none;
     transition: top 0.3s, left 0.3s, transform 0.3s, font-size 0.3s;
